test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-modify-downstream/02-secret.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: test
  namespace: pol-data-sync-modify-downstream-ns
type: Opaque
