test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-modify-downstream/04-modify.yaml
apiVersion: v1
data:
  KAFKA_ADDRESS: 192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092
  ZK_ADDRESS: modified
kind: ConfigMap
metadata:
  labels:
    somekey: somevalue
  name: zk-kafka-address
  namespace: pol-data-sync-modify-downstream-ns
