test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-modify-downstream/chainsaw-step-01-apply-1-2.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: pol-data-sync
  namespace: pol-data-sync-modify-downstream-ns
spec:
  rules:
  - generate:
      apiVersion: v1
      data:
        data:
          KAFKA_ADDRESS: 192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092
          ZK_ADDRESS: 192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181
        kind: ConfigMap
        metadata:
          labels:
            somekey: somevalue
      kind: ConfigMap
      name: zk-kafka-address
      namespace: pol-data-sync-modify-downstream-ns
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - Secret
    name: gen-zk
