test/conformance/chainsaw/generate/policy/standard/data/sync/pol-data-sync-modify-downstream/chainsaw-step-02-apply-1-1.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: test
  namespace: pol-data-sync-modify-downstream-ns
type: Opaque
